<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".StudyHistoryActivity" >

    <LinearLayout
        style="?android:attr/buttonBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/btnToday"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/history_today"
            android:textSize="12sp" />

        <Button
            android:id="@+id/btnWeek"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/history_week"
            android:textSize="12sp" />

        <Button
            android:id="@+id/btnMonth"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/history_30"
            android:textSize="12sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/container_chart"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.3"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin" />

    <ListView
        android:id="@+id/lvUnits"
        android:layout_width="match_parent"
        android:layout_marginTop="@dimen/item_horizontal_margin"
        android:layout_height="0dp"
        android:layout_weight="0.7" >
    </ListView>

</LinearLayout>